# nfl-draft-2026

./: .gitignore  README.es.md  README.md  pyproject.toml  requirements.txt
.github/instructions/: python-data.instructions.md
.github/skills/review-data/: SKILL.md  check_raw_data_conformance.py  rules.json
data/brugler/: qb.csv  wr.csv
data/raw/: arif-consensous-bb.csv  brugler-cb.csv  brugler-di.csv  brugler-ds.csv  brugler-ed.csv  brugler-lb.csv  brugler-oc.csv  brugler-og.csv  brugler-ot.csv  brugler-qb.csv  brugler-rb.csv  brugler-te.csv  brugler-wr.csv  my-big-board.csv  nfl-grades.csv  nflmockdraftdatabase-2026-04-15.csv  pff-big-board-2026-04-13.csv  ras-2026-04-14.csv  vikings-predraft-visits.csv  vikings-top30-visits.csv
notebooks/data_engineering/: 01_data_ingestion.ipynb  my_big_board.ipynb
notebooks/reports/: player_overview.ipynb
src/: data_loader.py
