[project]
name = "nfl-draft-2026"
version = "0.1.0"
description = "Proyecto de Analisis de jugadores del Draft de la NFL 2026"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
	"pandas>=2.0.0",
	"numpy>=1.24.0",
	"matplotlib>=3.7.0",
	"seaborn>=0.12.0",
	"jupyter>=1.0.0",
	"jupyterlab>=4.0.0",
	"notebook>=7.0.0",
	"ipykernel>=6.0.0",
	"openpyxl>=3.1.0",
]
